# predicting-word-importance

./: .gitignore  README.md  pyproject.toml
src/predwordimp/data/: dataset_job.py
src/predwordimp/eval/: annotation.py  kpe.py  metrics.py  util.py  wi_eval.py
src/predwordimp/eval/reproduce/: WI-NLI.json  WI-PI.json  evaluate.py
src/predwordimp/training/: train.py
src/predwordimp/util/: eval_dir.py  job.py  logger.py  run.py  visual.py
tests/: dataset_job_test.py  wi_eval_test.py
